<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scroll" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="#ffffffff"
	android:textColor="#ff000000"
    android:fillViewport="true">
    
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   		android:orientation="vertical"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content">
		<TextView android:id="@+id/txtlogo"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/txtlogo"
			android:layout_marginBottom="8dp" />

		<TextView android:id="@+id/txt01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvname" />
		<EditText android:id="@+id/tvname"
		    android:inputType="text"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<TextView android:id="@+id/txt02"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvurl" />

		<LinearLayout android:id="@+id/LinearLayout03" 
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent">
			<EditText android:id="@+id/tvurl"
			    android:inputType="textUri"
        		android:layout_weight="1"
				android:layout_width="0dip"
				android:layout_height="wrap_content" />
			<Button android:id="@+id/butschool"
				android:text="@string/butschool"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="buttonSchoolClicked" />
		</LinearLayout> 
	
		<TextView android:id="@+id/txt03"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvlogin" />
 		<EditText android:id="@+id/tvlogin"
 		    android:inputType="text"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<TextView android:id="@+id/txt04"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tvpassword" />
		<EditText android:id="@+id/tvpassword"
			android:inputType="textPassword"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="32dp" />
	</LinearLayout>
</ScrollView>